feat(backend): :sparkles: add new `/checkout` endpoint to create order
add new `/checkout` endpoint to create order from selected products' ID and coupons' ID.
