# server/server.ts
@@ -61,4 +61,19 @@ app.get('/coupons/:id', (req: Request, res: Response) => {
   res.json(coupon);
 });
 
+app.post('/checkout', (req: Request, res: Response) => {
+  const { productIds, couponIds, totalPrice, netPrice } = req.body;
+  const products = productsRepository.getProductsByIds(productIds);
+  const coupons = couponRepository.getCouponsByIds(couponIds);
+  const order = orderRepository.addOrder({
+    id: undefined,
+    products,
+    coupons,
+    totalPrice: totalPrice,
+    netPrice: netPrice,
+  });
+  console.log(order);
+  return res.json(order);
+});
+
 app.listen(5000, () => console.log('Server running on port 5000 🚀'));
